--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <module>book-service</module>
 		<module>reader-service</module>
 		<module>issue-service</module>
-		<module>discover_service</module>
+		<module>discover-service</module>
 	</modules>
     <properties>
 		<java.version>21</java.version>
