--- a/issue-service/pom.xml
+++ b/issue-service/pom.xml
@@ -42,7 +42,18 @@
         <artifactId>lombok</artifactId>
         <optional>true</optional>
     </dependency>
-
+    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator -->
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-actuator</artifactId>
+        <version>3.2.4</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/io.micrometer/micrometer-registry-prometheus -->
+    <dependency>
+        <groupId>io.micrometer</groupId>
+        <artifactId>micrometer-registry-prometheus</artifactId>
+        <version>1.12.5</version>
+    </dependency>
 </dependencies>
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
